syntax="proto3";
option java_generic_services = true;
option java_multiple_files = true;
option java_package = "org.comp7705.protocol.definition";
option java_generate_equals_and_hash = true;
option java_string_check_utf8 = true;

// CheckAndMoveArgs
// sourcePath: path of the directory or file need to be moved
// targetPath: path where directory or file will be moved to
message MoveRequest {
  string sourcePath = 1;
  string targetPath = 2;
}

message MoveResponse {

}